--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,9 @@
+@article{dtn-definition,
+  title={Delay Tolerant networks (DTNs) a Tutorial, 2003},
+  author={Warthman, Forrest},
+  journal={Warthman Associates}
+}
+
 @book{gross2013handbook,
   title={Handbook of Graph Theory, Second Edition},
   author={Gross, J.L. and Yellen, J. and Zhang, P.},
@@ -55,4 +61,120 @@
   volume={4},
   pages={563--569},
   year={2014}
+}
+
+@article{arden,
+title = "ARDEN: Anonymous networking in delay tolerant networks ",
+journal = "Ad Hoc Networks ",
+volume = "10",
+number = "6",
+pages = "918 - 930",
+year = "2012",
+note = "",
+issn = "1570-8705",
+author = "Cong Shi and Xiapu Luo and Patrick Traynor and Mostafa H. Ammar and Ellen W. Zegura",
+keywords = "Delay tolerant networks",
+keywords = "Anonymous networking",
+keywords = "Privacy",
+keywords = "Attribute-based encryption "
+}
+
+@article{latency-leak,
+ author = {Hopper, Nicholas and Vasserman, Eugene Y. and Chan-TIN, Eric},
+ title = {How Much Anonymity Does Network Latency Leak?},
+ journal = {ACM Trans. Inf. Syst. Secur.},
+ issue_date = {February 2010},
+ volume = {13},
+ number = {2},
+ month = mar,
+ year = {2010},
+ issn = {1094-9224},
+ pages = {13:1--13:28},
+ articleno = {13},
+ numpages = {28},
+ doi = {10.1145/1698750.1698753},
+ acmid = {1698753},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{enpassant,
+  title={EnPassant: anonymous routing for disruption-tolerant networks with applications in assistive environments},
+  author={Vakde, Gauri and Bibikar, Radhika and Le, Zhengyi and Wright, Matthew},
+  journal={Security and Communication Networks},
+  volume={4},
+  number={11},
+  pages={1243--1256},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{deterministic-dtn,
+  title={Optimal routing and scheduling for deterministic delay tolerant networks},
+  author={Hay, David and Giaccone, Paolo},
+  booktitle={Wireless On-Demand Network Systems and Services, 2009. WONS 2009. Sixth International Conference on},
+  pages={27--34},
+  year={2009},
+  organization={IEEE}
+}
+
+@incollection{probabilistic-dtn,
+  title={DTN routing with probabilistic trajectory prediction},
+  author={Cardei, Ionut and Liu, Cong and Wu, Jie and Yuan, Quan},
+  booktitle={Wireless Algorithms, Systems, and Applications},
+  pages={40--51},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{contact-graph,
+  title={From contacts to graphs: pitfalls in using complex network analysis for DTN routing},
+  author={Hossmann, Theus and Legendre, Franck and Spyropoulos, Thrasyvoulos},
+  booktitle={INFOCOM Workshops 2009, IEEE},
+  pages={1--6},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{location-attack,
+  title={Location diversity in anonymity networks},
+  author={Feamster, Nick and Dingledine, Roger},
+  booktitle={Proceedings of the 2004 ACM workshop on Privacy in the electronic society},
+  pages={66--76},
+  year={2004},
+  organization={ACM}
+}
+
+@inproceedings{congestion-attack,
+  title={A Practical Congestion Attack on Tor Using Long Paths.},
+  author={Evans, Nathan S and Dingledine, Roger and Grothoff, Christian},
+  booktitle={USENIX Security Symposium},
+  pages={33--50},
+  year={2009}
+}
+
+@book{oracle-types,
+  title={Routing in a delay tolerant network},
+  author={Jain, Sushant and Fall, Kevin and Patra, Rabin},
+  volume={34},
+  number={4},
+  year={2004},
+  publisher={ACM}
+}
+
+@article{dtn-security-analysis,
+  title={Security analysis for delay/disruption tolerant satellite and sensor networks},
+  author={Bhutta, N and Ansa, G and Johnson, E and Ahmad, N and Alsiyabi, M and Cruickshank, HS},
+  year={2009}
+}
+
+@article{onion-routing,
+  title={Onion routing},
+  author={Goldschlag, David and Reed, Michael and Syverson, Paul},
+  journal={Communications of the ACM},
+  volume={42},
+  number={2},
+  pages={39--41},
+  year={1999},
+  publisher={ACM}
 }
