--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -148,7 +148,7 @@ Insitute 2\\
 \maketitle
 
 \begin{abstract}
-\red{Abstract goes here}
+With the growth of Internet of Things (IoT) the data as well as the anonymity preservation has become a challenging research topic. Using Delay Tolerant Network (DTN) with onion routing an alternative secure network that hides the source identity can be achieved. We consider as predictable DTN at such networks where the behaviour is known in advance or where a repetitive action occurs over the time like in public transport networks. This project shows how the prior stage of path choosing in the onion routing can be achieved using the information provided by predictable networks while the security of our proposed method is analysed.
 \end{abstract}
 
 \keywords{Onion Routing, Delay-tolerant Network, Anonymous networking, Privacy, Security}
@@ -175,6 +175,6 @@ Insitute 2\\
 
 All links were last followed on \today.
 
-\bibliographystyle{splncs03}
+\bibliographystyle{ieeetr}
 
 \end{document}
