--- a/paper/inc/introduction.tex
+++ b/paper/inc/introduction.tex
@@ -1,15 +1,15 @@
 \section{Introduction}\label{sec:intro}
 
-\red{To be done} 
+Delay Tolerant Networks (DTNs) \cite{dtn-definition} are a class of networks aimed to provide end-to-end communication into environments lacking continuous connectivity or with long delays. To do so, a new layer called Bundle layer is used. It works on top of transport layer to handle disruptions and long delays using the store-carry-and-forward principle. The received data, called bundle, is stored in persistent storage on each DTN node, forwarding it when a new opportunity of contact occurs.
 
-%\red{Delay Tolerant Networks (DTNs) are a class of networks aimed to provide end-to-end communication into environments lacking continuous connectivity or with long delays. DTNs can also be used as a communication alternative when the internet internet network can not be trusted, e.g: unknown Wi-Fi hotspots.}
+There are several scenarios where the DTNs can be useful like reporting systems, deep space missions, disaster recovery and rural area networks among other things. Many of these applications needs to preserve user information as they can share sensible information. In traditional encryption the transmitted data is hidden from thirds.  Nonetheless the source and destination identities are shown, leading to possible attackers know information about the victim. Using onion routing we are able to preserve the anonymity of such nodes too, e.g: in anonymous reporting systems a user may want to preserve his identity to avoid possible reprisal.
 
-%\red{DTNs use the store-carry-and-forward principle, i.e: the node stores the message (bundle) received , carrying it if is needed and forwarding it when a connection opportunity occurs.}
+We will focus in reporting systems where the data as well as the identity of the nodes need to be protected using the DTN as a communication alternative as DTN can be used as an alternative when the usual network can not be trusted.
 
-%\red{Due to the nature of the DTNs the routing decision has been challenging since the beginning.}
+A popular method to achieve sender anonymity as well as data preservation is onion routing \cite{onion-routing}. Onion routing is used to protect the communications allowing to hide the source of a message as well as the data itself to the rest of the nodes that forwards the information. It is said that onion routing is not aplicable to DTNs \cite{dtn-security-analysis}. Nevertheless, this protocol can be applicable if we use predictable (deterministic) DTNs. Deterministic DTNs has been studied before \cite{probabilistic-dtn}, \cite{deterministic-dtn}. A method to represent the network behaviour, as is used in our proposal, is trough a graph representation where nodes are the elements of the network and each edge of the graph is a contact between nodes.
 
-%\red{The main problem w this kind of networks is mainly the routing and the security of the data exchanged. On the one hand due to the nature of the nodes of the DTN could be under continuous movement making the routing of the data a difficult task. On the other hand \red{\ldots}}
+As onion routing needs to know the route in advance to encrypt the message accordingly for each node in the path, we solve the challenging routing problem in DTNs \cite{oracle-types}. 
 
-%\red{Onion routing is used to protect the communications online allowing to hide the origin or the source of the information as well as the data itself to the rest of the nodes that forwards the information.}
+There are previous research using DTN and onion routing together to achieve anonymous communications like in \cite{arden}. \red{Explain why this algorithm is not as good as ours.} \red{Explain other methods that was researched like \cite{enpassant}...}
 
-%\red{DTN Oracle: Information of the network as contact information (time of the contact and duration) and the public key of every single node of the network, in order to be able to do the Onion Routing.} 
+The remainder of the paper is organized as follows: Section \ref{sec:proposal} presents a deeper review of relevant concepts used to design an algorithm to choose a path from a given set of restrictions. Allowing to perform the layering stage of onion routing. Section \ref{sec:sanalysis} presents an informal analysis of the security of our proposal from the point of view of passive and active attackers. Section \ref{sec:evaluation} presents the results of our simulation over public transport networks, as they are considered predictable networks. This results show the performance of our method in terms of different statistical metrics. Section \ref{sec:conclusions} provides concluding remarks as well as possible future research work.
